--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "axios": "^1.13.4",
     "bcryptjs-react": "^2.4.6",
     "dot-env": "^0.0.1",
     "firebase": "^12.8.0",
